# mini-projects-robotics

./: README.md
mini_project_1/: publisher.py
mini_project_1/mini_project_1/: README.md  subscriber.py
mini_project_10/: README.md  package.xml  setup.py  start_system.launch.py
mini_project_10/src/: helico_autopilot.py
mini_project_11/: README.md  package.xml  setup.py
mini_project_11/src/: terminator_vision_tracker.py
mini_project_12/: README.md  package.xml  setup.py
mini_project_12/src/: ekf_fusion_node.py
mini_project_13/src/: README.md  a_star_planner.py  package.xml  setup.py
mini_project_14/mini_project_14/: README.md  package.xml  setup.py
mini_project_14/src/: grid_mapper.py
mini_project_15/src/: CMakeLists.txt  README.md  mcl_particle_filter.py  package.xml  setup.py
mini_project_16/src/: README.md  apf_navigator.py  package.xml  setup.py
mini_project_17/src/: mpc_controller.py
mini_project_18/src/: README.md  ik_jacobian_solver.py  package.xml  setup.py
mini_project_19/src/: README.md  __init__.py  ekf_fusion.py  package.xml  setup.py
mini_project_20/src/: README.md  package.xml  q_learning_agent.py  setup.py
mini_project_21/src/: README.md  digital_twin_controller.py  package.xml  setup.py
mini_project_22/src/: README.md  package.xml  setup.py  swarm_flocking.py
mini_project_4/: README.md  package.xml  setup.py
mini_project_5/: README.md  package.xml  setup.py
mini_project_7/: README.md  package.xml  setup.py
mini_project_8/: README.md  package.xml  setup.py
mini_project_8/src/: distance_controller.py
mini_project_9/: README.md  my_robot.urdf  package.xml  setup.py
(+12 files in other folders)
